openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  annotations:
    openshift.io/description: |
      Try your ideas here.
      Reset weekly on Saturday
    openshift.io/display-name: Sandbox
