openshift/base/8k-postgres-cache.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: eightknot-app
    app: eightknot-app
    name: postgres-cache
  name: postgres-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eightknot-app
  strategy: {}
  template:
    metadata:
      labels:
        app: eightknot-app
        app.kubernetes.io/part-of: eightknot-app
    spec:
      containers:
        - image: quay.io/enterprisedb/postgresql:16
          name: postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-cache-data
      restartpolicy: always
      resources:
        limits:
          memory: 4Gi
        requests:
          memory: 128Mi
      volumes:
        - name: empty
          emptyDir: {}
        - name: postgres-cache-data
          persistentVolumeClaim:
            claimName: eightknot-postgres-cache-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: eightknot-app
  name: postgres-cache
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: eightknot-postgres-cache
