openshift/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eightknot-app-server
spec:
  rules:
    - host: ''
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eightknot-app-server
                port:
                  number: 8080
